通知详情修改、新建通知修改

--- a/wisdomCampus/html/new_message.html
+++ b/wisdomCampus/html/new_message.html
@@ -113,7 +113,7 @@
 					</div>
 				</div>-->
 			</div>
-			<div style="margin: 10px;">
+			<div style="margin: 10px;color: gray;">
 				{{'已选('+selectPeople.length+'人）:'}}<span v-for="(people,index) of selectPeople">
 					{{people.utname}}
 				</span>
