--- a/wisdomCampus/html/noticeDetails.html
+++ b/wisdomCampus/html/noticeDetails.html
@@ -129,12 +129,14 @@
 						<a class="" style="font-size: 12px;color: #3c9bfe;" v-on:click="checkEnc(0,index)">{{extraFile}}</a>
 					</p>
 				</template>
-				<p class="" style="height: 10px;background-color: #f2f2f2;"></p>
+				<template v-if="detailModel.SendManId != personal.utid">
+					<p class="" style="height: 10px;background-color: #f2f2f2;"></p>
 				<a style="color: black;size: 15px;margin-left: 15px;">回复</a>
 				<div style="padding-top: 5px;height: 170px;">
 					<textarea v-model="content" style="border: 1px solid gainsboro;margin-left: 10px;width: 95%;" placeholder="请输入要回复的内容" rows="4"></textarea>
 					<button v-on:click.stop="replyContent()" type="button" class="mui-btn-primary down-btn" style="float: right;margin-right: 15px;margin-top: -10px;">确定</button>
 				</div>
+				</template>
 				<p class="" style="height: 10px;background-color: #f2f2f2;"></p>
 				<p class="titleCSS" style="font-size: 13px;color: #333;margin-top: 10px;margin-left: 10px;">接收列表(未读{{detailModel.NoReadCnt}}人/共{{detailModel.NoReadCnt+detailModel.ReadCnt}}人)</p>
 				<ul class="mui-table-view">
@@ -176,6 +178,7 @@
 		<script type="text/javascript">
 			//获取个人信息
 			var personal = store.get(window.storageKeyName.PERSONALINFO);
+			console.log('personal:'+JSON.stringify(personal));
 			var curPage = {};
 			mui.plusReady(function() {
 				//				var curPage = utils.getSessionStorageByUrlsKey();
