--- a/wisdomCampus/html/all-list.html
+++ b/wisdomCampus/html/all-list.html
@@ -124,7 +124,7 @@
 							已回复
 						</a>
 						<a id="send" class="mui-control-item" href="#item5mobile">
-							我发出的
+							发出的
 						</a>
 
 					</div>
@@ -385,7 +385,7 @@
 					var personal = store.get(window.storageKeyName.PERSONALINFO);
 
 					if(id == "1" && title == "send") {
-						console.log('qqqqqq');
+						console.log('qqqqqq111');
 						tempData = {
 							schoolId: storageKeyName.SCHOOLID, //学校ID
 							sendManId: personal.utid, //发送人ID
@@ -415,13 +415,13 @@
 							}
 						});
 					} else if(id == "1" && title != "send") {
-						console.log('qqqqqq');
+						console.log('qqqqqq222');
 						tempData = {
 							schoolId: storageKeyName.SCHOOLID, //学校ID
 							sendMan: '', //发送人ID
 							receiveManId: personal.utid, //接收人ID
 							title: '', //标题
-							status: title.replace("receive", ''), //状态,0 全部,1 发出,2 撤销
+							status: title.replace("receive", ''), //状态,0 全部，1 已阅,2 未阅,3 已回复
 							progress: '0', //进程,0 全部,1 新建,2 处理中,3 阅毕,4 已撤销
 							beginTime: '20170101', //查询开始时间
 							endTime: '30180127', //查询结束时间
@@ -442,6 +442,7 @@
 							}
 						});
 					} else if(id == "2" && title == "send") {
+						console.log('qqqqqq333');
 						tempData = {
 							schoolId: storageKeyName.SCHOOLID, //学校ID
 							applyManId: personal.utid, //申请人ID
@@ -472,6 +473,7 @@
 							}
 						});
 					} else if(id == "2" && title != "send") {
+						console.log('qqqqqq444');
 						tempData = {
 							schoolId: storageKeyName.SCHOOLID, //学校ID
 							approveManId: personal.utid, //审批人ID
